syntax = "proto3";

package message;

// ---------------Message service-------------------

service Message {
  rpc addMessage(Request) returns (Response) {}
}

message Request {
  string message_id = 1;
  string message_type = 2;
}

message Response {
  string message_id = 1;
  string message_type = 2;
}